# icmbook

./: .gitignore  .gitmodules  404.html  5.2.ipynb  Makefile  README.md  _config.yml  _toc.yml  environment.yml
.github/workflows/: deploy-book.yml
_ext/: icm_animation.py  icm_audio.py  icm_figure.py  icm_glossary.py  icm_interactive.py  icm_pyquist.py  icm_roles.py  icm_schedule.py
_static/: audio-chip.js  course-nav.js  custom.css  live-cells.css  live-cells.js  page-toc.js
content/: Template.ipynb  about.md  chapter-covers.ipynb  errata.md  glossary.md  index.md  intro.md  license.md  references.bib  references.md  setup.ipynb  template-md.md  template-notebook.ipynb
content/appendix/: Math.md  Python.md  intro.md
content/ch00/: 00.md  01.md  02.md  03.md  index.md
content/ch00/code/: fm.py
content/ch01/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  index.md
content/ch01-introduction/: AShortHistory.md  Exercises.md  WhatIsComputerMusic.md  intro.md
content/ch01-signals/: Acoustics.ipynb  Preliminaries.ipynb
content/ch01/code/: synthesis.py
content/ch01/figures/: make_figures.py
content/ch02/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  index.md
content/ch02-digital-audio/: Exercises.md  Quantization.md  Sampling.md  Sound.md  intro.md
content/ch02-sampling/: Aliasing.ipynb  Nyquist.ipynb  Quantization.ipynb  Sampling.ipynb
content/ch02/code/: pyquist_intro.py  stereo.py  synthesis.py  synthesis_numpy.py
content/ch02/figures/: make_figures.py
content/ch03/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  index.md
content/ch03-convolution/: Building.ipynb  Convolution.ipynb  IR.ipynb  LSI.ipynb  Modes.ipynb
content/ch03-getting-started/: Exercises.md  HelloSound.md  Installation.md  intro.md
content/ch03/code/: additive.py  sinusoid.py  waveforms.py  wavetable.py
content/ch03/figures/: make_figures.py
content/ch04/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  index.md
content/ch04-complex/: Basic-Operations.ipynb  Definition.ipynb  Intro.ipynb  Multiplication-and-division.ipynb  Powers-and-waves.ipynb
content/ch04-oscillators/: AdditiveSynthesis.md  Exercises.md  Oscillators.md  intro.md
content/ch04/code/: block_based.py  envelope.py  score_render.py  unit_generators.py
content/ch04/figures/: make_figures.py
content/ch05/: 00.md  01.md  02.ipynb  02.md  03.md  04.md  05.ipynb  05.md  06.md  07.md  08.md  09.md  index.md
content/ch05-envelopes/: ADSR.md  Amplitude.md  Exercises.md  intro.md
content/ch05-fourier/: AnalysisFrequencies.ipynb  Examples.ipynb  SummingSinusoids.ipynb
content/ch05/figures/: make_figures.py
content/ch06/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.ipynb  08.md  09.md  10.md  index.md
content/ch06-dft-properties/: Conjugate-Symmetry.ipynb  Linearity.ipynb  Shifting.ipynb
content/ch06-modulation/: AmplitudeModulation.md  Exercises.md  FrequencyModulation.md  intro.md
content/ch06/code/: modulation.py
content/ch06/figures/: make_figures.py
content/ch07/: 00.md  01.md  02.ipynb  03.md  04.md  05.md  06.md  07.md  index.md
content/ch07-inverse-dft/: Sinusoid.ipynb
content/ch07-subtractive/: Exercises.md  Filters.md  NoiseAndSpectra.md  intro.md
content/ch07/code/: sampling.py
content/ch07/figures/: make_figures.py
content/ch08/: index.md
content/ch08-fft/: FFT.ipynb
content/ch08-wavetable/: Exercises.md  Sampling.md  Wavetables.md  intro.md
content/ch09/: index.md
content/ch09-granular-physical/: Exercises.md  GranularSynthesis.md  PhysicalModeling.md  intro.md
content/ch09-stft/: Framing.ipynb
content/ch10/: index.md
content/ch10-convtheorem/: Filtering.ipynb
content/ch10-midi/: ControlSignals.md  Exercises.md  MIDIBasics.md  intro.md
content/ch11/: index.md
content/ch11-iir/: IIRFilters.ipynb  UsingIIR.ipynb
content/ch11-scores/: Exercises.md  MusicRepresentation.md  Sequencing.md  intro.md
content/ch12/: index.md
content/ch12-algorithmic/: Exercises.md  GenerativeMethods.md  Randomness.md  intro.md
content/ch12-ztransform/: PoleZero.ipynb  Transfer.ipynb  ZT.ipynb
content/ch13/: index.md
content/ch13-effects/: Delays.md  Exercises.md  Reverberation.md  intro.md
content/ch14/: index.md
content/ch14-spectral/: Exercises.md  STFT.md  SpectralProcessing.md  intro.md
content/ch15/: index.md
content/ch16/: index.md
content/ch17/: index.md
content/ch18/: index.md
content/ch19/: index.md
content/course/: about.md  home.md  index.md  projects.md  resources.md  schedule.md  showcase.md  syllabus.md  website.md
content/course/assignments/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  322-final.md  622-final.md  index.md
content/course/projects/: 1.md  2.md  index.md
content/course/resources/: 1-accounts.md  1-software.md  2-textbooks.md  3-jupyter.md  3-technical.md  index.md
content/pyquist/: Examples.md  Installation.md  Overview.md  Reference.md  SoundModel.md  intro.md
content/pyquist/api/: audio.md  device.md  helper.md  plot.md  score.md  web.md
content/reference/: index.md
content/template-animation/: index.ipynb  main.md
content/template-animation/notebooks/: harmonics-square.ipynb  phasor-unrolled.ipynb  winding-machine.ipynb
content/template-interactive/: index.ipynb  main.md
content/template-interactive/notebooks/: feature-budget.ipynb  feature-depends.ipynb  feature-play.ipynb  feature-slider.ipynb  harmonics-builder.ipynb  param-player.ipynb  starter.ipynb  three-modes.ipynb
content/unused/: inverse figures.ipynb
tools/: fetch_pyquist_readme.py  merge_chapters.py  merge_pure_md.py  split_chapters.py  split_pure_md.py  vendor_pyodide.py
tools/icm_anim/: icm_anim.py  pyproject.toml
tools/icm_plotly/: icm_plotly.py  pyproject.toml
tools/icm_widgets/: icm_widgets.py  pyproject.toml
tools/sounddevice_stub/: pyproject.toml  sounddevice.py
tools/sounddevice_stub/sounddevice.egg-info/: PKG-INFO  SOURCES.txt
tools/soundfile_stub/: pyproject.toml  soundfile.py
tools/soundfile_stub/soundfile.egg-info/: PKG-INFO  SOURCES.txt
(+5 files in other folders)
