# The book's animation engine (manim -> chrome-less <video>). Build-only:
# manim has no Pyodide build, so unlike icm_widgets this is never wheeled for
# the browser kernel. Installed editable via environment.yml.
#
# icm-widgets (the palette source) is deliberately NOT declared as a
# dependency: it isn't on PyPI, so declaring it would make a standalone
# `pip install -e tools/icm_anim` resolve a stranger's package instead.
# environment.yml installs both editables side by side.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "icm-anim"
version = "0.1.0"
description = "Narrative-animation rendering for CMU Intro to Computer Music pages (manim scenes baked to inert looping video)."
requires-python = ">=3.10"
dependencies = ["manim>=0.20,<0.21"]

[tool.setuptools]
py-modules = ["icm_anim"]
