# House plotly styling + the build/live display switch for widget cells.
# Wheeled into _static/wheels by `make wheels` for the browser kernel and
# installed editable via environment.yml for build-time execution. Every live
# page installs the manifest wheels, so this wheel declares NO dependencies —
# plotly and anywidget arrive per-page via live-cells.js pypiFeatures, and
# icm_plotly is only imported on pages that use them. Never published to PyPI.
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "icm-plotly"
version = "0.3.0"
description = "House plotly template and widget-cell plumbing for Computer Music Principles interactive pages."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = ["icm_plotly"]
