# The book's parameter-slider widget API (widget cells stay pure Python; the
# widget's HTML is self-contained). Wheeled into _static/wheels by
# `make wheels` for the browser kernel, and installed editable via
# environment.yml for build-time execution. Never published to PyPI.
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "icm-widgets"
version = "0.3.0"
description = "Parameter-slider widgets for Computer Music Principles interactive pages (pre-rendered matplotlib frame grids)."
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]

[tool.setuptools]
py-modules = ["icm_widgets"]
