# Browser-only stand-in for `sounddevice` (PortAudio can't exist in WASM).
# Wheeled by `make wheels` and installed in the Pyodide kernel BEFORE pyquist,
# so micropip sees the dependency as satisfied and never pulls the real
# package. Never published to PyPI.
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sounddevice"
version = "0.5.1.post901"
description = "Browser (Pyodide/WASM) stub for sounddevice. pq.play() uses the inline notebook player; hardware audio I/O is unavailable in the browser."
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["sounddevice"]
